--- a/apps/users/src/app/app.component.html
+++ b/apps/users/src/app/app.component.html
@@ -1,17 +1,3 @@
-<main>
-  <section>
-    <mat-card class="wink:max-w-md wink:mx-auto wink:mt-9">
-      <mat-card-header>
-        <mat-card-title class="wink:text-xl wink:font-bold wink:text-blue-500 wink:bg-blend-color-burn">Material mit Tailwind</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <p class="wink:text-gray-600">Eine Material Card mit Tailwind-Styling</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="primary" class="wink:bg-blue-600 wink:hover:bg-blue-700">
-          Button mit beiden Frameworks
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </section>
-</main>
+<lib-navbar></lib-navbar>
+<router-outlet></router-outlet>
+
